add card index validation and selection logic